--- a/3.html
+++ b/3.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>JavaScript</title>
+		<title>Welcome to JavaScript</title>
 		<meta charset="utf-8">
 	</head>
 
